--- a/.github/workflows/t2.yaml
+++ b/.github/workflows/t2.yaml
@@ -1,4 +1,4 @@
-name: Test 2
+name: Lint & format checks
 
 on:
   pull_request:
@@ -8,9 +8,39 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  test2:
-    name: Lint Python files
+  python:
+    name: Python files
     runs-on: ubuntu-22.04
     steps:
-      - name: Test
-        run: echo "hi"
+      - name: Check out a copy of the TFQ git repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10.15'
+
+      - name: Install Pylint
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install pylint
+
+      - name: Lint all
+        run: |
+          pylint .
+
+  yaml:
+    name: YAML files
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Check out a copy of the TFQ git repository
+        uses: actions/checkout@v4
+
+      - name: Install yamllint
+        run: |
+          sudo apt-get install yamllint
+
+      - name: Lint all
+        run: |
+          yamllint .
+
