--- a/.github/workflows/lint-python-files.yaml
+++ b/.github/workflows/lint-python-files.yaml
@@ -5,12 +5,8 @@ run-name: >
   Performing Python lint & format checks for ${{github.event_name}}
   by ${{github.triggering_actor}}
 
-# Default values. These can be overridden when workflow dispatch is used.
 env:
-  py_version: '3.10.15'
-  # FIXME: get the version in requirements.txt instead
-  pylint_version: '3.3.3'
-  yapf_version: '0.43.0'
+  python_ver: '3.10.15'
 
 on:
   pull_request:
@@ -27,15 +23,15 @@ on:
   # Manual on-demand invocations.
   workflow_dispatch:
     inputs:
-      py_version:
+      python_ver:
         description: 'Python version:'
         type: string
 
-      pylint_version:
+      pylint_ver:
         description: 'Pylint version:'
         type: string
 
-      yapf_version:
+      yapf_ver:
         description: 'Yapf version:'
         type: string
 
@@ -55,32 +51,39 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{inputs.py_version || env.py_version}}
+          python-version: ${{inputs.python_ver || env.python_ver}}
           cache: 'pip'
 
-      - name: Extract the version of Pylint from requirements.txt
+      - name: Determine the version of Pylint to use
         id: req
         run: |
-          echo "pylint_version=" >> "$GITHUB_OUTPUT"
-          number_regex='[0-9]+(\.[0-9]+)?(\.[0-9]+)?'
-          while IFS= read -r line; do
-            if [[ $line =~ ^pylint.* ]]; then
-              if [[ $line =~ $number_regex ]]; then
-                version="${BASH_REMATCH[0]}"
-                echo "pylint_version=$version" >> "$GITHUB_OUTPUT"
-                break
+          # If given a version, use that, else get it from requirements.txt.
+          if [[ "${{inputs.pylint_ver}}" != "" ]]; then
+            echo "pylint_version=${{inputs.pylint_ver}}" >> "$GITHUB_OUTPUT"
+          else
+            echo "pylint_version=" >> "$GITHUB_OUTPUT"
+            number_regex='[0-9]+(\.[0-9]+)?(\.[0-9]+)?'
+            while IFS= read -r line; do
+              if [[ $line =~ ^pylint.* ]]; then
+                if [[ $line =~ $number_regex ]]; then
+                  version="${BASH_REMATCH[0]}"
+                  echo "pylint_version=$version" >> "$GITHUB_OUTPUT"
+                  break
+                fi
               fi
-            fi
-          done < "$git_root/requirements.txt"
+            done < "$git_root/requirements.txt"
+          fi
 
       - name: Install Pylint
         run: |
-          python -m pip install --upgrade pip
           python -m pip install pylint==${{step.req.outputs.pylint_version}}
 
       - name: Run Pylint
         run: |
           pylint --rcfile .pylintrc ./benchmarks ./release ./tensorflow_quantum
+
+
+
 
   # format:
   #   name: Format
@@ -92,11 +95,11 @@ jobs:
   #     - name: Set up Python
   #       uses: actions/setup-python@v5
   #       with:
-  #         python-version: ${{inputs.py_version || env.py_version}}
+  #         python-version: ${{inputs.python_ver || env.python_ver}}
   #         cache: 'pip'
 
   #     - name: Install Yapf
   #       run: |
   #         python -m pip install --upgrade pip
-  #         python -m pip install yapf==${{inputs.yapf_version || env.yapf_version}}
+  #         python -m pip install yapf==${{inputs.yapf_ver || env.yapf_ver}}
           
