--- a/.github/workflows/lint-python-files.yaml
+++ b/.github/workflows/lint-python-files.yaml
@@ -7,7 +7,7 @@ run-name: >
 
 env:
   # Python version to use. Can be overridden when workflow dispatch is used.
-  python_ver: '3.10.15'
+  python_ver: '3.11'
 
 on:
   pull_request:
@@ -153,13 +153,16 @@ jobs:
       - name: Get the list of Python files changed in the triggering event
         id: changes
         uses: tj-actions/changed-files@v45
+        # Although this workflow is triggered only if Python files are changed,
+        # they might not be the *only* files changed; hence, we have to filter
+        # the set of files down to just the Python files.
         with:
           files: |
             **.py
 
       - name: Foo
         run: |
-          echo "${{steps.changes.outputs.all_changed_files}}"
+          pylint "${{steps.changes.outputs.all_changed_files}}"
 
 
 
