--- a/.github/workflows/lint-c++-files.yaml
+++ b/.github/workflows/lint-c++-files.yaml
@@ -57,29 +57,12 @@ jobs:
       - name: Check out a copy of the TFQ git repository
         uses: actions/checkout@v4
 
-      # - name: Install clang-format
-      #   run: |
-      #     version="${{inputs.clang_format_ver || env.clang_format_ver}}"
-      #     sudo apt-get install -y "clang-format-$version"
+      - name: Install clang-format
+        run: |
+          version="${{inputs.clang_format_ver || env.clang_format_ver}}"
+          sudo apt-get install -y "clang-format-$version"
 
-      # - name: Run clang-format
-      #   uses: jidicula/clang-format-action@v4.14.0
-      #   with:
-      #     clang-format-version: ${{inputs.clang_format_ver || env.clang_format_ver}}
-      #     fallback-style: Google
-      #     check-path: ${{matrix.path}}
+      - name: Run clang-format on C++ and Protobuf files
+        run: |
+          git-clang-format --version
 
-      - name: Run clang-format
-        uses: cpp-linter/cpp-linter-action@v2
-        with:
-          style: 'google'
-          # Turn on debugging when running manually.
-          verbosity: >
-            ${{github.event_name == 'workflow_dispatch' && 'debug' || 'info'}}
-          version: ${{inputs.clang_format_ver || env.clang_format_ver}}
-          no-lgtm: true
-          step-summary: true
-          # Automatically run as many threads as possible.
-          jobs: 0
-          # Don't run clang-tidy.
-          tidy-checks: '-*'
