--- a/.github/workflows/lint-c++-files.yaml
+++ b/.github/workflows/lint-c++-files.yaml
@@ -12,7 +12,7 @@ run-name: >
 
 env:
   # Version of clang-format to use. Can be overridden with workflow_dispatch.
-  clang_format_ver: '18'
+  clang_format_ver: '19'
 
 on:
   pull_request:
@@ -60,6 +60,7 @@ jobs:
       - name: Install clang-format
         run: |
           version="${{inputs.clang_format_ver || env.clang_format_ver}}"
+          apt search clang-format
           sudo apt-get install -y "clang-format-$version"
 
       - name: Run clang-format on C++ and Protobuf files
