--- a/.github/workflows/lint-c++-files.yaml
+++ b/.github/workflows/lint-c++-files.yaml
@@ -13,7 +13,7 @@ run-name: >
 env:
   # Version of clang-format to use. Can be overridden with workflow_dispatch.
   # Note: as of 2025-01-14, version 15 is the latest available
-  clang_format_ver: '19'
+x  clang_format_ver: '18'
 
 on:
   pull_request:
@@ -61,8 +61,8 @@ jobs:
       - name: Install clang-format
         run: |
           version="${{inputs.clang_format_ver || env.clang_format_ver}}"
-          apt search clang-format
-          sudo apt-get install -y "clang-format-$version"
+          #sudo apt-get install -y "clang-format-$version"
+          clang-format --version
 
       - name: Run clang-format on C++ and Protobuf files
         run: |
