--- a/.github/workflows/lint-c++-files.yaml
+++ b/.github/workflows/lint-c++-files.yaml
@@ -63,6 +63,7 @@ jobs:
           version="${{inputs.clang_format_ver || env.clang_format_ver}}"
           #sudo apt-get install -y "clang-format-$version"
           clang-format --version
+          git-clang-format --version
 
       - name: Run clang-format on C++ and Protobuf files
         run: |
