--- a/.github/workflows/lint-c++-files.yaml
+++ b/.github/workflows/lint-c++-files.yaml
@@ -12,7 +12,7 @@ run-name: >
 
 env:
   # Version of clang-format to use. Can be overridden with workflow_dispatch.
-  # Note: as of 2025-01-14, version 15 is the latest available
+  # Note: as of 2025-01-14, v. 18 is the latest available on Ubuntu 24.04.
   clang_format_ver: '18'
 
 on:
@@ -62,7 +62,7 @@ jobs:
         run: |
           version="${{inputs.clang_format_ver || env.clang_format_ver}}"
           clang-format --version
-          git clang-format --version
+          git clang-format-18 --version
 
       - name: Run clang-format on C++ and Protobuf files
         run: |
