--- a/.github/workflows/lint-c++-files.yaml
+++ b/.github/workflows/lint-c++-files.yaml
@@ -61,4 +61,4 @@ jobs:
       - name: Run clang-format on C++ and Protobuf files
         run: |
           version="${{inputs.clang_format_ver || env.clang_format_ver}}"
-          git clang-format-$version --style google --diff ${{github.event.before}}"
+          git clang-format-$version --style google --diff ${{github.event.before}}
