--- a/.github/workflows/lint-c++-files.yaml
+++ b/.github/workflows/lint-c++-files.yaml
@@ -31,12 +31,9 @@ on:
       - '**.h'
       - '**.proto'
 
-  # For manual invocation, with options that might be useful for debugging.
+  # Allow manual invocation, with options that might be useful for debugging.
   workflow_dispatch:
     inputs:
-      files:
-        description: "Files and/or directories to check:"
-        type: string
       clang_format_ver:
         description: 'clang-format version:'
         type: string
@@ -58,36 +55,31 @@ jobs:
       - name: Check out a copy of the TFQ git repository
         uses: actions/checkout@v4
 
-      - if: github.event_name != 'workflow_dispatch'
-        name: Get the list of C++ & Protobuf files changed in the triggering event
-        id: changes
-        uses: tj-actions/changed-files@v45
-        # Although this workflow is triggered only if C++ & Protobuf files are
-        # changed, they might not be the *only* files changed; hence, we have
-        # to filter the set of files down to just the C++/Protobuf files.
-        with:
-          files: |
-            **.cc
-            **.h
-            **.proto
-
-      - name: Determine the files to be checked
-        id: files
-        run: |
-          # Files/dirs given during manual invocation take precedence.
-          if [[ "${{github.event_name}}" == "workflow_dispatch" ]]; then
-            if [[ -n "${{inputs.files}}" ]]; then
-              files="${{inputs.files}}"
-            else
-              echo "::error title=Error::No file names or directories provided."
-              exit 1
-            fi
-          else
-            files="${{steps.changes.outputs.all_changed_files}}"
-          fi
-          echo "files_to_check='$files'" >> "$GITHUB_OUTPUT"
-
       - name: Run clang-format on C++ and Protobuf files
         run: |
           version="${{inputs.clang_format_ver || env.clang_format_ver}}"
-          git clang-format-$version --style google --diff ${{github.event.before}}
+          git clang-format-$version --style google --diff \
+            ${{github.event.before}} 2>&1 diff.out
+          exit_code=$?
+          if [[ -s ./diff.out ]]; then
+            # Write output both here and to the job summary.
+            TERM=xterm-color
+            bo=$'\e[1m'
+            bl=$'\e[38;5;117m'
+            rs=$'\e[0m'
+            hi="👋🏻"
+            u="https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}"
+            echo "$hi ${bl}Visit $bo$u${rs}$bl for formatted diff output$rs $hi"
+            echo "::group::clang-format output"
+            cat diff.out
+            echo "::endgroup::"
+            # shellcheck disable=SC2006
+            {
+            echo "## Output from `clang-format`"
+            echo ""
+            echo '```diff'
+            echo "$(< diff.out)"
+            echo '```'
+            } >> "$GITHUB_STEP_SUMMARY"
+          fi
+          exit $exit_code
