--- a/.github/workflows/lint-c++-files.yaml
+++ b/.github/workflows/lint-c++-files.yaml
@@ -50,34 +50,39 @@ jobs:
     name: Check the format of C++ and Protobuf files
     runs-on: ubuntu-24.04
     steps:
-      - name: Check out a copy of the TFQ git repository
-        uses: actions/checkout@v4
-
-      - name: Run clang-format on C++ and Protobuf files
+      - name: foo
         run: |
-          version="${{inputs.clang_format_ver || env.clang_format_ver}}"
-          git clang-format-$version --style google --diff \
-            ${{github.event.before}} > diff.out 2>&1
-          exit_code=$?
-          if [[ -s ./diff.out ]]; then
-            # Write output both here and to the job summary.
-            TERM=xterm-color
-            bo=$'\e[1m'
-            bl=$'\e[38;5;117m'
-            rs=$'\e[0m'
-            hi="👋🏻"
-            u="https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}"
-            echo "$hi ${bl}Visit $bo$u${rs}$bl for formatted diff output$rs $hi"
-            echo "::group::clang-format output"
-            cat diff.out
-            echo "::endgroup::"
-            # shellcheck disable=SC2006
-            {
-            echo "## Output from `clang-format`"
-            echo ""
-            echo '```diff'
-            echo "$(< diff.out)"
-            echo '```'
-            } >> "$GITHUB_STEP_SUMMARY"
-          fi
-          exit $exit_code
+          echo ${{ github.event.pull_request.commits }}
+
+
+      # - name: Check out a copy of the TFQ git repository
+      #   uses: actions/checkout@v4
+
+      # - name: Run clang-format on C++ and Protobuf files
+      #   run: |
+      #     version="${{inputs.clang_format_ver || env.clang_format_ver}}"
+      #     git clang-format-$version --style google --diff \
+      #       ${{github.event.before}} > diff.out 2>&1
+      #     exit_code=$?
+      #     if [[ -s ./diff.out ]]; then
+      #       # Write output both here and to the job summary.
+      #       TERM=xterm-color
+      #       bo=$'\e[1m'
+      #       bl=$'\e[38;5;117m'
+      #       rs=$'\e[0m'
+      #       hi="👋🏻"
+      #       u="https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}"
+      #       echo "$hi ${bl}Visit $bo$u${rs}$bl for formatted diff output$rs $hi"
+      #       echo "::group::clang-format output"
+      #       cat diff.out
+      #       echo "::endgroup::"
+      #       # shellcheck disable=SC2006
+      #       {
+      #       echo "## Output from `clang-format`"
+      #       echo ""
+      #       echo '```diff'
+      #       echo "$(< diff.out)"
+      #       echo '```'
+      #       } >> "$GITHUB_STEP_SUMMARY"
+      #     fi
+      #     exit $exit_code
