--- a/.github/workflows/lint-c++-files.yaml
+++ b/.github/workflows/lint-c++-files.yaml
@@ -52,7 +52,7 @@ jobs:
     steps:
       - name: foo
         env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
+          GITHUB_CONTEXT: ${{ toJson(github.event.commits) }}
         run: echo "$GITHUB_CONTEXT"
 
         # run: |
